--- a/test.html
+++ b/test.html
@@ -78,11 +78,14 @@
 
         </script>
         <script type="text/javascript"> // ROS create toplic variable
+            // 8080: http
+            // 9090: web socket
+            
             // Connecting to ROS
             // -----------------
 
             var ros = new ROSLIB.Ros({
-                url : 'ws://192.168.1.10:9090'
+                url : 'ws://' + host + ':9090'
             });
 
             ros.on('connection', function() {
