--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script>
+            var host = '192.168.1.10';
+            var port = '9090';
+        </script>
         <title>Test</title>
 
         <meta charset="utf-8" />
@@ -39,8 +43,6 @@
         <link href="./bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script type="text/javascript">// global variables
-            var host = '192.168.1.10';
-
             var video_width = 640;
             var video_height = 480;
             var scaler = 1;
